style(WeatherApp-1280): corrected dividers' heights. Set gap-x for screenshots and decreased mt. Increased font size forthe full description element and increased w of its container

--- a/src/index.css
+++ b/src/index.css
@@ -366,7 +366,7 @@
 
     --block-div-2xs-h: 570px;
     --block-div-md-h: 552px;
-    --block-div-lg-h: 558px;
+    --block-div-lg-h: 476px;
     --name-year-size: 3rem;
   }
 }
